fixed overflow on left nav and adjusted list component to look real

--- a/src/components/css/LeftSideNav.module.css
+++ b/src/components/css/LeftSideNav.module.css
@@ -8,8 +8,9 @@
   max-width: 370px;
   padding: 1.35%;
   border-radius: 10px;
-  height: 754px;
+  height: 740px;
   margin-left: 4px;
+  overflow: hidden;
 }
 .add,
 .next,
@@ -85,10 +86,20 @@ button > * {
 .libraryimage {
   margin-right: 5px;
 }
-
+.playlists {
+  height: 660px;
+  width: 390px;
+  max-height: 100%;
+  overflow: scroll;
+  scrollbar-width: thick;
+  scrollbar-color: transparent transparent;
+}
+.playlists:hover {
+  scrollbar-color: #898989 transparent;
+}
 .coverphoto {
-  width: 80px;
-  height: 80px;
+  width: 50px;
+  height: 50px;
 }
 
 .listcomponent {
@@ -97,25 +108,26 @@ button > * {
   justify-content: flex-start;
   gap: 30px;
   border-radius: 5px;
-  padding :10px 15px
- }
-.listcomponenttext h3{
+  padding: 10px 15px;
+  height: 60px;
+}
+.listcomponenttext h3 {
   color: white;
   margin-bottom: -5px;
   margin-left: -50px;
 }
-.listcomponenttext p{
+.listcomponenttext p {
   color: #b3b3b3;
 }
 .listcomponenttext {
   display: flex;
   flex-direction: column;
-  justify-content:  space-around;
+  justify-content: space-around;
   margin-left: -15px;
-  margin-top: -0px;
+  margin-top: -17px;
   gap: 0;
 }
-.listcomponent:hover{
-    background-color: #393939;
-    cursor: pointer;
+.listcomponent:hover {
+  background-color: #393939;
+  cursor: pointer;
 }
